--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.0",
     "axios": "^0.21.1",
+    "chartjs": "^0.3.24",
     "history": "^5.0.0",
     "node": "^16.1.0",
     "react": "^17.0.2",
