--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,18 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/charts": "^1.1.16",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.0",
     "axios": "^0.21.1",
+    "cal-heatmap": "^3.6.2",
     "chartjs": "^0.3.24",
     "history": "^5.0.0",
     "node": "^16.1.0",
     "react": "^17.0.2",
+    "react-calendar-heatmap": "^1.8.1",
+    "react-day-hour-heatmap": "^0.1.7",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-tooltip": "^4.2.21",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
