--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 ATLAS_URI= mongodb+srv://matt:MattPass@cluster0.pymvf.mongodb.net/GymWorm?retryWrites=true&w=majority
 NODE_ENV=production
+PORT= 5000
